View Issue Details

IDProjectCategoryView StatusLast Update
0023570Open CASCADEOCCT:DRAWpublic2013-12-19 13:56
ReporterabvAssigned Toika  
PrioritynormalSeveritytweak 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Product Version6.5.4 
Target Version6.7.0Fixed in Version6.7.0 
Summary0023570: Command param in DRAW outputs non-readable symbols
DescriptionCommand param in DRAW outputs non-readable symbols for enumerated parameters, after "alpha:"
Steps To ReproduceDraw[]> param write.surfacecurve.mode
     ACTUAL STATUS of Static Parameter write.surfacecurve.mode
--- Typed Value : write.surfacecurve.mode
--- Type : Enum [in 0-1] 0:Off 1:On , alpha: .☺f:0 ☻☺:1
--- Value : On (Native:On Coded:1)
To modify, param name_param new_val
TagsNo tags attached.
Test case numberbugs xde bug23570

Attached Files

  • bug23570 (1,173 bytes)

Activities

abv

2012-11-28 11:38

manager   ~0022398

Note: this problem appeared in 6.5.3

mkv

2013-06-26 15:36

tester  

bug23570 (1,173 bytes)

mkv

2013-06-26 15:41

tester   ~0024885

Dear BugMaster,
This problem there is in current version also.

ika

2013-07-09 13:40

manager   ~0025000

Branch CR23570 is ready to be reviewed.

Dear ABV,
Please review.

abv

2013-07-12 07:15

manager   ~0025042

No remarks, please test

apn

2013-07-16 13:20

administrator   ~0025077

Dear BugMaster,

Branch CR23570 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: ee2c3ffb39f1366cdcc200033f00a4c38e952056

Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 8 (8 on master)

products component :
Linux: 0 (0 on master)
Windows: 63 (63 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
bugs xde bug23570 - OK

Testing on Linux:
Total MEMORY difference: 365911020 / 365734040
Total CPU difference: 53056.88000000016 / 45333.95000000106

Testing on Windows:
Total MEMORY difference: 424281360 / 426141024
Total CPU difference: 34417.609375 / 35068.53125

There are not differences in images found by testdiff.

Related Changesets

occt: master 381a6d0e

2013-07-18 08:44:08

ika

Details Diff
0023570: Command param in DRAW outputs non-readable symbols
Added test case bugs/xde/bug23570
Affected Issues
0023570
mod - src/MoniTool/MoniTool_TypedValue.cxx Diff File
add - tests/bugs/xde/bug23570 Diff File

Issue History

Date Modified Username Field Change
2012-11-22 11:17 abv New Issue
2012-11-22 11:17 abv Assigned To => mkv
2012-11-28 11:38 abv Note Added: 0022398
2013-06-26 15:36 mkv File Added: bug23570
2013-06-26 15:41 mkv Note Added: 0024885
2013-06-26 15:41 mkv Assigned To mkv => abv
2013-06-26 15:41 mkv Status new => assigned
2013-06-26 16:06 abv Assigned To abv => ika
2013-07-09 13:40 ika Note Added: 0025000
2013-07-09 13:40 ika Assigned To ika => abv
2013-07-09 13:40 ika Status assigned => resolved
2013-07-12 07:15 abv Note Added: 0025042
2013-07-12 07:15 abv Assigned To abv => bugmaster
2013-07-12 07:15 abv Status resolved => reviewed
2013-07-12 12:58 apn Assigned To bugmaster => apn
2013-07-16 13:20 apn Note Added: 0025077
2013-07-16 13:21 apn Test case number => bugs xde bug23570
2013-07-16 13:21 apn Assigned To apn => bugmaster
2013-07-16 13:21 apn Status reviewed => tested
2013-07-16 13:21 apn Target Version Unscheduled => 6.7.0
2013-07-19 13:33 ika Changeset attached => occt master 381a6d0e
2013-07-19 13:33 ika Assigned To bugmaster => ika
2013-07-19 13:33 ika Status tested => verified
2013-07-19 13:33 ika Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:56 bugmaster Fixed in Version => 6.7.0