0023570: Command param in DRAW outputs non-readable symbols Added test case bugs/xde/bug23570